# thought-garden

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: 0.avif  1.avif  10.avif  11.avif  12.avif  13.avif  14.avif  15.avif  2.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif  9.avif  theme.css
src/create/: backendstuff.js  index.html  style.css  style.css.bak
src/home/: index.html  style.css
src/intro/: index.html  styles.css
src/settings/: index.html  style.css
