workspace = { members = ["tg-backend"] }
[package]
name = "thought-garden"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tg-backend = {path = "./tg-backend"}
tokio = { version = "1.37.0", features = ["rt"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
